; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-ntlmssp.c_ntlmssp_cleanup.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-ntlmssp.c_ntlmssp_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.NtlmsspDecode = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ntlmssp_cleanup(%struct.NtlmsspDecode* %0) #0 {
  %2 = alloca %struct.NtlmsspDecode*, align 8
  store %struct.NtlmsspDecode* %0, %struct.NtlmsspDecode** %2, align 8
  %3 = load %struct.NtlmsspDecode*, %struct.NtlmsspDecode** %2, align 8
  %4 = getelementptr inbounds %struct.NtlmsspDecode, %struct.NtlmsspDecode* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.NtlmsspDecode*, %struct.NtlmsspDecode** %2, align 8
  %9 = getelementptr inbounds %struct.NtlmsspDecode, %struct.NtlmsspDecode* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @free(i64 %10)
  %12 = load %struct.NtlmsspDecode*, %struct.NtlmsspDecode** %2, align 8
  %13 = getelementptr inbounds %struct.NtlmsspDecode, %struct.NtlmsspDecode* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
